#trac-476 #trac-478 Responsive changes

--- a/src/app/features/transaction-details/transaction-details.component.html
+++ b/src/app/features/transaction-details/transaction-details.component.html
@@ -218,7 +218,7 @@
       </div>
       <div class="col-xs-12 col-md-12 center pt-5" style="color: #6C757D;">
         View this Transaction in Stellar<br>
-        <a href="{{txnItem.txnUrl}}" target="_blank"><button class="mt-2 btn btn-primary btn-main btn-search"
+        <a href="{{txnItem.txnUrl}}" target="_blank"><button class="mt-2 btn btn-primary btn-main"
             type="button" style="width: fit-content;background-color: #3182BD;border:none">View Transaction</button></a>
       </div>
     </div>
