--- a/src/app/features/proofs/pococ/proof-pococ.component.html
+++ b/src/app/features/proofs/pococ/proof-pococ.component.html
@@ -1,161 +1,156 @@
 <app-header></app-header>
-
-
-
-<div class="container-fluid md-3 shadow-bottom bg-white pt-4 pb-2">
-  <div class="container">
-    <div class="col-12">
-      <h4>PROOF OF CHANGE OF CUSTODY (POCOC)</h4>
-      <p>Proof of mutual consent between two accounts for change of custody of an item</p>
-    </div>
+<div class="container">
+  <div class="progress-loader-container mt-5" *ngIf="!loadingComplete">
+    <mat-spinner class="progress-loader" [color]="color" [mode]="mode" [value]="value">
+    </mat-spinner>
   </div>
-</div>
-<div class="progress-loader-container mt-5" *ngIf="!loadingComplete">
-  <mat-spinner class="progress-loader" [color]="color" [mode]="mode" [value]="value">
-  </mat-spinner>
-</div>
-<div *ngIf="loadingComplete">
-  <div class="container" *ngIf="loadingComplete && !errorOccurred">
-    <div class="col-xs-12 col-md-12 mt-3 mt-md-4">
-      <div class="col-xs-12 col-md-12 pl-0 text-left" style="font-weight: 700;color: #2D2F39;font-size: 28px;">
-        Transaction Details
+  <div class="container mt-5" *ngIf="loadingComplete && !errorOccurred">
+    <div class="row mb-3">
+      <div class="col-12">
+        <h4>PROOF OF CHANGE OF CUSTODY (POCOC)</h4>
+        <p>Proof of mutual consent between two accounts for change of custody of an item</p>
       </div>
-      <div class="col-12 pb-3" style="background-color: white;" *ngIf="txnItem">
+    </div>
 
-        <div class="row pt-3 ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Transaction Hash
-          </div>
-          <div class="col-7 col-md-10"
-            style="font-weight: 600;color:#818E94;overflow: hidden; text-overflow: ellipsis;">
-            :{{txnItem.txnHash}}
-          </div>
+    <div class="col-xs-12 col-md-12 text-left pt-2 pb-1"
+      style="background-color: white; border-bottom: 0.5px solid #dee2e6;">
+      <h2 style="font-weight: 500;color: #2D2F39;font-size: 28px;">Transaction Data</h2>
+    </div>
+
+    <div class="col-12 pb-3" style="background-color: white;">
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.txnHash'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Transaction Hash
         </div>
-
-        <div class="row mt-2 ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Asset Code
-          </div>
-          <div class="col-7 col-md-10" style="font-weight: 600;color:#818E94;">
-            : {{txnItem.assetCode}}
-          </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.txnHash}}
         </div>
-
-        <div class="row mt-2  ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Quantity
-          </div>
-          <div class="col-7 col-md-10" style="font-weight: 600;color:#818E94;">
-            : {{txnItem.quantity}}
-          </div>
-        </div>
-
-        <div class="row mt-2 ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Sender
-          </div>
-          <div class="col-7 col-md-10 overflow-ellipsis" style="font-weight: 600;color:#818E94;">
-            : {{txnItem.sender}}
-          </div>
-        </div>
-
-        <div class="row  ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Receiver
-          </div>
-          <div class="col-7 col-md-10 overflow-ellipsis" style="font-weight: 600;color:#818E94;">
-            : {{txnItem.receiver}}
-          </div>
-        </div>
-
-        <div class="row mt-2 ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Identifier
-          </div>
-          <div class="col-7 col-md-10" style="font-weight: 600;color:#818E94;overflow: hidden; text-overflow: ellipsis">
-            : {{txnItem.identifier}}
-          </div>
-        </div>
-
-        <div class="row mt-2 ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Status
-          </div>
-          <div class="col-7 col-md-10" style="font-weight: 700;color:#818E94;">
-            : <span class="pl-3 pr-3 pt-2 pb-2 badge badge-pill badge-primary"
-              style="font-size: 14px;background-color: #F3F1FF;color:#818E94;font-weight: 700;"><i
-                class="far {{ txnItem.proofStatus == 'Success' ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched' }} mr-1"
-                style="font-size: 18px;"></i>{{txnItem.proofStatus}}</span>
-          </div>
-        </div>
-
-        <div class="row mt-2 ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Digitally Signed
-          </div>
-          <div class="col-7 col-md-10" style="font-weight: 700;color:#818E94;">
-            : <span class="mr-1 pl-3 pr-3 pt-2 pb-2 badge badge-pill badge-primary"
-              style="font-size: 14px;background-color: #F3F1FF;color:#818E94;font-weight: 700;"><i
-                class="far {{ txnItem.senderSigned ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched' }} mr-1"
-                style="font-size: 18px;"></i>Sender</span>
-            <span class="pl-3 pr-3 pt-2 pb-2 badge badge-pill badge-primary"
-              style="font-size: 14px;background-color: #F3F1FF;color:#818E94;font-weight: 700;"><i
-                class="far {{ txnItem.receiverSigned ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched' }} mr-1"
-                style="font-size: 18px;"></i>Receiver</span>
-          </div>
-        </div>
-
-        <div class="row mt-2 ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Timestamp
-          </div>
-          <div class="col-7 col-md-10" style="font-weight: 600;color:#818E94;overflow: hidden; text-overflow: ellipsis">
-            : {{txnItem.timestamp | date: 'medium'}}
-          </div>
-        </div>
-
-        <div class="row mt-2 ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Blockchain
-          </div>
-          <div class="col-7 col-md-10" style="font-weight: 600;color:#818E94;overflow: hidden; text-overflow: ellipsis">
-            : {{txnItem.blockchain}}
-          </div>
-        </div>
-
-        <div class="row mt-2 ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Transaction Fee
-          </div>
-          <div class="col-7 col-md-10" style="font-weight: 600;color:#818E94;overflow: hidden; text-overflow: ellipsis">
-            : {{txnItem.fee}}
-          </div>
-        </div>
-
-        <div class="row mt-2 ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Ledger
-          </div>
-          <div class="col-7 col-md-10" style="font-weight: 600;color:#818E94;overflow: hidden; text-overflow: ellipsis">
-            : {{txnItem.ledger}}
-          </div>
-        </div>
-
-        <div class="row  ml-md-1">
-          <div class="col-5 col-md-2" style="font-weight: 500;">
-            Sequence
-          </div>
-          <div class="col-7 col-md-10" style="font-weight: 600;color:#818E94;overflow: hidden; text-overflow: ellipsis">
-            :{{txnItem.sequence}}
-          </div>
-        </div>
-
-        
-
       </div>
 
-      <!-- Uncomment This -->
-      <!-- <div class="card mb-3 mt-3 pl-md-4 pt-md-4 pb-md-4">
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.assetCode'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Asset Code
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.assetCode}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.quantity'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Quantity
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.quantity}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.sender'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Sender
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.sender}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.receiver'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Receiver
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.receiver}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.identifier'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Identifier
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.identifier}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.proofStatus'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Status
+        </div>
+        <div class="col-12 col-md-9" style="overflow: hidden; text-overflow: ellipsis;">
+          <span class="pl-3 pr-3 pt-2 pb-2 badge badge-pill badge-primary"
+            style="font-size: 14px;background-color: #F3F1FF;color:#818E94;font-weight: 700;"><i
+              class="far {{ txnItem.proofStatus == 'Success' ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched' }} mr-1"
+              style="font-size: 18px;"></i>{{txnItem.proofStatus}}</span>
+        </div>
+      </div>
+
+      <!-- NG IF has to be written -->
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4">
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Digitally Signed
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          <span class="mr-1 pl-3 pr-3 pt-2 pb-2 badge badge-pill badge-primary"
+            style="font-size: 14px;background-color: #F3F1FF;color:#818E94;font-weight: 700;"><i
+              class="far {{ txnItem.senderSigned ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched' }} mr-1"
+              style="font-size: 18px;"></i>Sender</span>
+          <span class="pl-3 pr-3 pt-2 pb-2 badge badge-pill badge-primary"
+            style="font-size: 14px;background-color: #F3F1FF;color:#818E94;font-weight: 700;"><i
+              class="far {{ txnItem.receiverSigned ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched' }} mr-1"
+              style="font-size: 18px;"></i>Receiver</span>
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.timestamp'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Timestamp
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.timestamp | date: 'medium'}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.blockchain'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Public Blockchain
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.blockchain}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.fee'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Transaction Fee
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.fee}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.ledger'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Ledger
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.ledger}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.sequence'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Sequence
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{txnItem.sequence}}
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Uncomment This -->
+    <!-- <div class="card mb-3 mt-3 pl-md-4 pt-md-4 pb-md-4">
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="row">
@@ -261,12 +256,11 @@
           </div>
         </div>
       </div> -->
-    </div>
-    <!-- View transaction in stellar section -->
+
     <div class="col-xs-12 col-md-12 center pt-5" style="color: #6C757D;">
       View this Transaction in Stellar<br>
-      <a href="{{txnItem.txnUrl}}" target="_blank"><button class="mt-2 btn btn-primary btn-main btn-search "
-          type="button" style="width: fit-content;background-color: #3182BD;border:none">View Transaction</button></a>
+      <a href="{{txnItem.txnUrl}}" target="_blank"><button class="mt-2 btn btn-primary btn-main" type="button"
+          style="width: fit-content;background-color: #3182BD;border:none">View Transaction</button></a>
     </div>
   </div>
   <div class="container" *ngIf="loadingComplete && errorOccurred">
