--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -1,267 +1,250 @@
 <app-header></app-header>
 
-<!-- The Modal -->
 <div class="modal" id="myModal">
-  <div class="modal-dialog"  >
+  <div class="modal-dialog">
     <div class="modal-content" style="border-radius: 0%;">
-
-      <!-- Modal Header -->
-      <div class="text-center pr-3 pt-2" >
+      <div class="text-center pr-3 pt-2">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-
       </div>
-
-      <!-- Modal body -->
       <div class="modal-body">
-        <div class="container" >
+        <div class="container">
           <div class="row">
             <div class="col-12 pb-2">
-              <svg class="checkmark ml-auto mr-auto" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52"><circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none"/><path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/></svg>
+              <svg class="checkmark ml-auto mr-auto" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 52 52">
+                <circle class="checkmark__circle" cx="26" cy="26" r="25" fill="none" />
+                <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8" /></svg>
             </div>
           </div>
           <div class="row">
             <div class="col-12">
-              <p class="lead mb-0"  style="font-size: 18px;font-weight:600;color: #262728;">How to validate  yourself ?</p>
+              <p class="lead mb-0" style="font-size: 18px;font-weight:600;color: #262728;">How to validate yourself ?
+              </p>
               <p class="lead mt-0" style="font-size: 16px;">
-                The previously shown hashes can also be matched manually by following the below mentioned steps. 
+                The previously shown hashes can also be matched manually by following the below mentioned steps.
               </p>
               <ol class="lead" style="font-size: 14px;font-weight:500;">
                 <li>
-                  Click the 'Copy to clipboard' <i class="far fa-clone" style="font-size: 18px;" aria-hidden="true" style="color: #818E94;"></i>
+                  Click the 'Copy to clipboard' <i class="far fa-clone" style="font-size: 18px;" aria-hidden="true"
+                    style="color: #818E94;"></i>
                   icon in your details section.
                 </li>
                 <li class="mt-1">
-                  Append the identifier from the transaction to the copied text which would be in <a href="https://en.wikipedia.org/wiki/Base64" target="_blank">Base64</a> encoded format. 
+                  Append the identifier from the transaction to the copied text which would be in <a
+                    href="https://en.wikipedia.org/wiki/Base64" target="_blank">Base64</a> encoded format.
                 </li>
                 <li class="mt-1">
-                  Now hash the above created string using <a href="https://en.wikipedia.org/wiki/SHA-2" target="_blank">SHA-256 hashing algorithm.</a>
+                  Now hash the above created string using <a href="https://en.wikipedia.org/wiki/SHA-2"
+                    target="_blank">SHA-256 hashing algorithm.</a>
                 </li>
                 <li class="mt-1">
-                  Finally the above generated hash value can be compared with the data hash included in the blockchain transaction.
+                  Finally the above generated hash value can be compared with the data hash included in the blockchain
+                  transaction.
                 </li>
               </ol>
               <p class="lead mt-0" style="font-size: 16px;">
-                For further support and information feel free to reach out to us. We are more than glad to assist. 
+                For further support and information feel free to reach out to us. We are more than glad to assist.
               </p>
             </div>
           </div>
         </div>
-          
-
-        
       </div>
-
-      <!-- Modal footer -->
-      <!-- <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-      </div> -->
-
     </div>
   </div>
 </div>
-
-<div class="container-fluid md-3 shadow-bottom bg-white pt-4 pb-2">
-  <div class="container">
-    <div class="col-12">
-      <h4>PROOF OF EXISTENCE (POE)</h4>
-      <p>Proof that a given data packet existed in the blockchain</p>
-    </div>
-  </div>
-</div>
-
-<div class="progress-loader-container mt-5" *ngIf="!loadingComplete">
-  <mat-spinner class="progress-loader" [color]="color" [mode]="mode" [value]="value">
-  </mat-spinner>
-</div>
-
-<!-- This is the item card component. -->
-<div class="container mt-5" *ngIf="loadingComplete && !errorOccurred">
-  <div class="col-xs-12 col-md-12 pl-0 text-left"
-    style="font-weight: 700;color: #2D2F39;font-size: 28px;">
-    Transaction Data
-  </div>
-  <div class="col-xs-12 col-md-12 pb-4 mt-2 ml-0 " style="background-color: white;">
-    <div class="row pt-2">
-      <div class="col-md-12 text-right">        
-        <button class="icon-only-btn float-right" (click)="copyB64Clipboard()">
-          <i class="far fa-clone" style="font-size: 18px;" aria-hidden="true" style="color: #818E94;"></i>
-        </button>
-        <div class="copy-notification float-right px-2" *ngIf="textCopied" [@inOutAnimation]>
-          <p class="m-0">Copied</p>
-        </div>
-        <div class="float-none"></div>
-      </div>
-    </div>
-
-    <div class="row mt-2" *ngFor="let item of tracifiedCoreData.data | keyvalue">
-      <div class="col-4 col-md-2" *ngIf="item.key != 'photos'" style="font-weight: 500;">
-        {{item.key}}
-      </div>
-      <div class="col-8 col-md-10 text-left overflow-ellipsis" *ngIf="item.key != 'photos'">
-        : {{item.value | json}}
-      </div>
-    </div>
-
-    
+<div class="container">
+  <div class="progress-loader-container mt-5" *ngIf="!loadingComplete">
+    <mat-spinner class="progress-loader" [color]="color" [mode]="mode" [value]="value">
+    </mat-spinner>
   </div>
 
-  <div class="col-xs-12 col-md-12 pb-4 mt-2 mb-3" style="background-color: white;">
-
-    <div class="row pt-4">
-      <div class="col-4 col-md-2" style="font-weight: 500;">
-        Transaction Hash
-      </div>
-      <div class="col-8 col-md-10 text-left overflow-ellipsis ">
-        : {{transactionData.Txnhash}}
+  <div class="container mt-5" *ngIf="loadingComplete && !errorOccurred">
+    <div class="row mb-3">
+      <div class="col-12">
+        <h4>PROOF OF EXISTENCE (POE)</h4>
+        <p>Proof that a given data packet existed in the blockchain</p>
       </div>
     </div>
 
-    <div class="row mt-2">
-      <div class="col-4 col-md-2" style="font-weight: 500;">
-        Public Key
-      </div>
-      <div class="col-8 col-md-10 text-left overflow-ellipsis">
-        : {{transactionData.SourceAccount}}
-      </div>
+    <div class="col-xs-12 col-md-12 text-left pt-2 pb-1"
+      style="background-color: white; border-bottom: 0.5px solid #dee2e6;">
+      <h2 style="font-weight: 500;color: #2D2F39;font-size: 28px;">Transaction Data</h2>
     </div>
-
-    <div class="row mt-2">
-      <div class="col-4 col-md-2" style="font-weight: 500;">
-        Identifier
-      </div>
-      <div class="col-8 col-md-10 text-left overflow-ellipsis">
-        : {{transactionData.Identifier}}
-      </div>
-    </div>
-
-    <div class="row mt-2">
-      <div class="col-4 col-md-2" style="font-weight: 500;">
-        Stage ID
-      </div>
-      <div class="col-8 col-md-10 text-left overflow-ellipsis">
-        : {{tracifiedCoreData.header.stageID}}
-      </div>
-    </div>
-
-    <div class="row mt-2">
-      <div class="col-4 col-md-2" style="font-weight: 500;">
-        Product Name
-      </div>
-      <div class="col-8 col-md-10 text-left overflow-ellipsis">
-        : {{tracifiedCoreData.header.item.itemName}}
-      </div>
-    </div>
-
-    <div class="row mt-2">
-      <div class="col-4 col-md-2" style="font-weight: 500;">
-        Product ID
-      </div>
-      <div class="col-8 col-md-10 text-left overflow-ellipsis">
-        : {{tracifiedCoreData.header.item.itemID}}
-      </div>
-    </div>
-
-    <div class="row mt-2">
-      <div class="col-4 col-md-2" style="font-weight: 500;">
-        Ledger
-      </div>
-      <div class="col-8 col-md-10 text-left overflow-ellipsis">
-        : {{transactionData.Ledger}}
-      </div>
-    </div>
-
-    <div class="row mt-2">
-      <div class="col-4 col-md-2" style="font-weight: 500;">
-        Fee
-      </div>
-      <div class="col-8 col-md-10 text-left overflow-ellipsis">
-        : {{transactionData.FeePaid}}
-      </div>
-    </div>
-
-    <div class="row mt-2">
-      <div class="col-4 col-md-2" style="font-weight: 500;">
-        Public Blockchain
-      </div>
-      <div class="col-8 col-md-10 text-left overflow-ellipsis ">
-        : {{transactionData.BlockchainName}}
-      </div>
-    </div>
-  </div>
-
-  <div class="card mb-3">
-    <div class="pt-2 pb-2 pl-3 row no-gutters status-border {{ hashesMatch ? 'matched' : 'not-matched'}}">
-
-      <div class="card-topic col-md-12 col-sm-12 col-xs-12 text-left pt-sm-2 pt-2 pb-sm-2 pb-2">
-        {{ hashesMatch ? 'Hashes Matched' : 'Hashes Not Matched'}}<i
-          class="fas ml-5 {{ hashesMatch ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched'}} "
-          style="font-size: 18px;"></i>
-      </div>
-    </div>
-    <div class="row mb-3 mt-3 ">
-      <!-- This is the content area -->
-
-      <div class="col-12 col-md-12 ">
-        <!-- Right col of the body -->
-        <div class="row  pl-3 ">
-
-          <div class="col-12 col-md-9 text-left " style="margin-top: auto;margin-bottom: auto;">
-            <!-- content area -->
-            <span style="color:#818E94;display:block;font-weight: 600;font-size: 18px;">
-              Hash value from Tracified
-            </span>
-            <span class="mt-2"
-              style="color:#2D2F39;display:block;font-weight: 700;font-size: 18px;display:block;white-space: nowrap; overflow: hidden; text-overflow: ellipsis;width:80%">
-              {{transactionData.DbHash | lowercase}}
-            </span>
-
+    <div class="col-xs-12 col-md-12 pb-4 ml-0 " style="background-color: white;">
+      <div class="row pt-2">
+        <div class="col-md-12 text-right">
+          <button class="icon-only-btn float-right" (click)="copyB64Clipboard()">
+            <i class="far fa-clone" style="font-size: 18px;" aria-hidden="true" style="color: #818E94;"></i>
+          </button>
+          <div class="copy-notification float-right px-2" *ngIf="textCopied" [@inOutAnimation]>
+            <p class="m-0">Copied</p>
           </div>
+          <div class="float-none"></div>
         </div>
-        
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4"
+        *ngFor="let item of tracifiedCoreData.data | keyvalue">
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;"
+          *ngIf="item.key != 'photos'">
+          {{item.key}}
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;" *ngIf="item.key != 'photos'">
+          {{item.value | json}}
+        </div>
+      </div>
+
+
+    </div>
+
+    <div class="col-xs-12 col-md-12 pb-4 mt-2 mb-3" style="background-color: white;">
+
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='transactionData.Txnhash'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Transaction Hash
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{transactionData.Txnhash}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='transactionData.SourceAccount'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Public Key
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{transactionData.SourceAccount}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='transactionData.Identifier'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Identifier
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{transactionData.Identifier}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='tracifiedCoreData.header.stageID'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Stage ID
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{tracifiedCoreData.header.stageID}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='tracifiedCoreData.header.item.itemName'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Product Name
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{tracifiedCoreData.header.item.itemName}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='tracifiedCoreData.header.item.itemID'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Product ID
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{tracifiedCoreData.header.item.itemID}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='transactionData.Ledger'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Ledger
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{transactionData.Ledger}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='transactionData.FeePaid'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Fee
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{transactionData.FeePaid}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='transactionData.BlockchainName'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Public Blockchain
+        </div>
+        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          {{transactionData.BlockchainName}}
+        </div>
       </div>
     </div>
-    <div class="row mb-3 mt-3">
-      <!-- This is the content area -->
 
-      <div class="col-12 col-sm-12 col-md-12">
-        <!-- Right col of the body -->
-        <div class="row  pl-3 ">
+    <div class="mb-3" style="background-color: #fff;">
+      <div class="pt-2 pb-2 pl-3 row no-gutters status-border {{ hashesMatch ? 'matched' : 'not-matched'}}">
+        <div class="card-topic col-md-12 col-sm-12 col-xs-12 text-left pt-sm-2 pt-2 pb-sm-1 pb-1">
+          <h2 style="font-weight: 500;color: #2D2F39;font-size: 24px;">
+            {{ hashesMatch ? 'Hashes Matched' : 'Hashes Not Matched'}}
+            <i class="fas ml-5 {{ hashesMatch ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched'}} "
+              style="font-size: 18px;"></i>
+          </h2>
 
-          <div class="col-12 col-sm-12 col-md-9 text-left" style="margin-top: auto;margin-bottom: auto;">
-            <!-- content area -->
-            <span style="color:#818E94;display:block;font-weight: 600;font-size: 18px;">
-              Hash value from Blockchain
-            </span>
-            <span class=" mt-2"
-              style="color:#2D2F39;display:block;font-weight: 700;font-size: 18px;display:block;white-space: nowrap; overflow: hidden; text-overflow: ellipsis;width:80%">
-              {{transactionData.BcHash | lowercase}}
-            </span>
+        </div>
+      </div>
 
+      <div class="row mb-3 mt-3 ">
+        <div class="col-12 col-md-12">
+          <div class="row pl-3">
+            <div class="col-12 col-md-9 text-left">
+              <div style="font-size: 18px; font-weight:500;">
+                Hash value from Tracified
+              </div>
+              <div class="mt-2"
+                style="font-weight: 700; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">
+                {{transactionData.DbHash | lowercase}}
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+      <div class="row mb-3 mt-3">
+        <div class="col-12 col-sm-12 col-md-12">
+          <div class="row  pl-3 ">
+            <div class="col-12 col-sm-12 col-md-9 text-left" style="margin-top: auto;margin-bottom: auto;">
+              <div style="font-size: 18px; font-weight:500;">
+                Hash value from Blockchain
+              </div>
+              <div class=" mt-2"
+                style="font-weight: 700; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;">
+                {{transactionData.BcHash | lowercase}}
+              </div>
+
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <!-- get it validated -->
-    <div class="row mt-3 mb-3">
-      <div class="col-12 text-center" style="text-decoration: underline;font-size: 13px;">
-        <a href="#" class="" data-toggle="modal" data-target="#myModal">
-          Get it Validated by yourself.
-        </a>
+      <!-- get it validated -->
+      <div class="row mt-3 mb-3">
+        <div class="col-12 text-center pb-2" style="text-decoration: underline;font-size: 13px;">
+          <a href="#" class="" data-toggle="modal" data-target="#myModal">
+            Get it validated by yourself.
+          </a>
+        </div>
       </div>
     </div>
+    <div class="col-xs-12 col-md-12 center pt-5" style="color: #6C757D;">
+      View this Transaction in Stellar<br>
+      <a href="{{transactionData.Url}}" target="_blank"><button class="mt-2 btn btn-primary btn-main" type="button"
+          style="width: fit-content;background-color: #3182BD;border:none">View Transaction</button></a>
+    </div>
   </div>
-  <div class="col-xs-12 col-md-12 center pt-5" style="color: #6C757D;">
-    View this Transaction in Stellar<br>
-    <a href="{{transactionData.Url}}" target="_blank"><button class="mt-2 btn btn-primary btn-main btn-search "
-        type="button" style="width: fit-content;background-color: #3182BD;border:none">View Transaction</button></a>
+  <div class="container" *ngIf="loadingComplete && errorOccurred">
+    <app-error-id [errorType]="error.errorType" [errorTitle]="error.errorTitle" [errorMessage]="error.errorMessage"
+      [errorMessageSecondary]="error.errorMessageSecondary">
+    </app-error-id>
   </div>
 </div>
-<div class="container" *ngIf="loadingComplete && errorOccurred">
-  <app-error-id [errorType]="error.errorType" [errorTitle]="error.errorTitle" [errorMessage]="error.errorMessage"
-    [errorMessageSecondary]="error.errorMessageSecondary">
-  </app-error-id>
-</div>
-
-
 <app-footer></app-footer>
