--- a/src/app/features/search-page/search-page.component.html
+++ b/src/app/features/search-page/search-page.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid md-3 shadow-bottom bg-white pt-4 pb-2">
         <div class="container">
                 <div class="row">
-                        <div class="col-md-8 col-xs-12 text-center text-md-left">
+                        <div class="col-md-8 col-xs-12">
                                 <p class="lead search-text overflow-ellipsis">{{results.length}}
                                         result{{results.length == 1 ? '' : 's'}} for {{searchId}}</p>
                         </div>
@@ -21,7 +21,8 @@
                         </div>
                         <div class="row content-area" *ngIf="loadingComplete && errorOccurred">
                                 <app-error-id [errorType]="error.errorType" [errorTitle]="error.errorTitle"
-                                        [errorMessage]="error.errorMessage" [errorMessageSecondary]="error.errorMessageSecondary">
+                                        [errorMessage]="error.errorMessage"
+                                        [errorMessageSecondary]="error.errorMessageSecondary">
                                 </app-error-id>
                         </div>
                 </div>
