--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,22 +1,17 @@
 <!-- This is the header component -->
 <nav class="navbar navbar-expand-sm header border-bottom">
   <div class="container-fluid">
-    <div class="row mr-0 ml-0" style="width: 100%;">
+    <div class="row no-gutters" style="width: 100%;">
       <!-- Logo area -->
-      <div class="col-md-2 col-12 justify-content-center text-center pt-4 pb-4">
-        <a href=""><img class="logo-menu" width="100%" src="../../../../assets/img/logo.png"></a>
+      <div class="col-3 d-block d-md-none justify-content-center text-left pt-2 pb-2">
+        <a href=""><img class="logo-menu" src="../../../../assets/img/logo_only.png" width="60%"></a>
       </div>
-      <div class="col-md-9 col-12">
+      <div class="col-3 d-none d-md-block justify-content-center text-center pt-4 pb-4">
+        <a href=""><img class="logo-menu" width="100%" src="../../../../assets/img/logo.png"></a>
+      </div>      
+      <div class="col-9 text-center">
         <app-searchbar></app-searchbar>
       </div>
-
-      <!-- Main website text area -->
-
-      <!-- Help text -->
-      <!-- <div class="col-md-1 d-none d-md-block menu-help-text text-center pt-4 pb-3">
-        <i class="far fa-question-circle"></i> Help
-      </div> -->
-
     </div>
   </div>
 </nav>
