#trac-478 Responsive layout changes

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,17 +1,4 @@
 <app-header></app-header>
-<div class="container-fluid md-3 shadow-bottom bg-white pt-4 pb-4">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h4>Recent Transactions</h4>
-            </div>
-            <!-- <div class="col-6 float-right">
-                <app-dropdown class="float-right"></app-dropdown>
-            </div> -->
-            <div class="float-none"></div>
-        </div>
-    </div>
-</div>
 <div class="main-container">
     <div class="container main-app-container">
         <div *ngIf="!loadingComplete">
@@ -19,6 +6,13 @@
             </mat-spinner>
         </div>
         <div class="row content-area" *ngIf="loadingComplete && !errorOccurred">
+            <div class="col-12 mt-3">
+                <div class="row mb-3">
+                    <div class="col-12">
+                        <h4>Recent Transactions</h4>
+                    </div>
+                </div>
+            </div>
             <app-card class="col-12" *ngFor="let item of results" [transactionData]="item"></app-card>
         </div>
         <div class="row content-area" *ngIf="loadingComplete && errorOccurred">
