#trac-478 Transaction details page adjustments

--- a/src/styles.css
+++ b/src/styles.css
@@ -282,6 +282,10 @@
     border: 0;
 }
 
+.show-bottom-border{
+    border-bottom: 1px solid #dee2e4;
+}
+
 /* Progress Loader */
 
 .progress-loader {
