Changing the footer year

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -7,11 +7,11 @@
         <!-- Copyright  area -->
         <div class="col-md-3 col-xs-12 text-center text-md-left pl-md-0 footer-text">
           <img src="../../../../assets/img/logo.png" style="max-width: 200px;">
-          
+
         </div>
         <!-- Logo placement -->
         <div class="col-md-6 col-xs-12 footer-text" style="text-align: center;">
-          © TilliT 2019 All Rights Reserved.
+          © TilliT {{currentYear}} All Rights Reserved.
         </div>
         <!-- Social icons -->
         <div class="col-md-3 col-xs-12 text-center text-md-right pr-md-0 footer-icons">
@@ -23,7 +23,7 @@
           <!-- Instagram -->
           <img src="../../../../assets/img/instag.svg">
         </div>
-      </div>      
+      </div>
     </div>
   </div>
 </footer>
