Removed hardcoded values in blockchain proof - TRAC-1652

--- a/src/app/features/search-page/card/card.component.html
+++ b/src/app/features/search-page/card/card.component.html
@@ -50,14 +50,14 @@
               </a>
             </div>
           </div>
-          <div class="row" style="width:100%;" *ngIf="transactionData.productId">
+          <!-- <div class="row" style="width:100%;" *ngIf="transactionData.productId">
             <div class="col-md-3 col-xs-12">
               <span style="font-weight: 600">Item ID : </span>
             </div>
             <div class="col-md-9 col-xs-12">
               <span class="cardcontent">{{transactionData.productId}}</span>
             </div>
-          </div>
+          </div> -->
           <div class="row" style="width:100%;margin-top: 5px;margin-bottom: 5px;" *ngIf="transactionData.identifier">
             <div class="col-md-3 col-xs-12">
               <span style="font-weight: 600">Identifier : </span>
