tillit hone page responsive issue #TRAC-3031

--- a/src/app/features/search-page/card/card.component.css
+++ b/src/app/features/search-page/card/card.component.css
@@ -1,2 +1,20 @@
 /* This file contains the styling of the item cards */
 
+@media screen and (max-width: 768px) {
+    .contentPadding{     
+       padding-top: 10px;
+    }
+    .buttonPadding{
+        margin-top: 10px;
+        padding-top: 10px;
+    }
+}
+
+.imageCardCenter{
+    justify-content: center;
+}
+
+.contentMargin{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
