TRAC-3031 tillit search issue

--- a/src/app/features/transaction-details/transaction-details.component.html
+++ b/src/app/features/transaction-details/transaction-details.component.html
@@ -121,12 +121,12 @@
           </div>
         </div>
 
-        <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf="txnItem.block">
+        <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf="txnItem.blockchainName">
           <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
-            Block
+            Blockchain
           </div>
           <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
-            {{txnItem.block}}
+            {{txnItem.blockchainName}}
           </div>
         </div>
 
