--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -9,7 +9,7 @@
             <div class="col-12 mt-3">
                 <div class="row mb-3">
                     <div class="col-12">
-                        <h4>Recent Transactions.</h4>
+                        <h4>Recent Transactions</h4>
                     </div>
                 </div>
             </div>
