--- a/src/app/features/proofs/pog/proof-pog.component.html
+++ b/src/app/features/proofs/pog/proof-pog.component.html
@@ -13,6 +13,16 @@
       </div>
     </div>
 
+    <div class="row ml-0 mr-0 pt-3 pb-3 mb-3" style="background-color: #E4F7E7;">
+      <div class="col-12 col-sm-12 col-md-1 text-center text-md-right">
+        <i class="fas fa-check-circle status-text-matched pt-1" style="font-size: 20px;"></i>
+      </div>
+      <div class="col-12 col-sm-12 col-md-11 text-center text-md-left">
+        <span style="color: #43BB52;font-weight: 500;font-size: 20px;">It's been verified that this is the first
+          transaction</span>
+      </div>
+    </div>
+
     <div class="col-xs-12 col-md-12 text-left pt-2 pb-1"
       style="background-color: white; border-bottom: 0.5px solid #dee2e6;">
       <h2 style="font-weight: 500;color: #2D2F39;font-size: 28px;">Transaction Data</h2>
@@ -24,7 +34,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Transaction Hash
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.txnHash}}
         </div>
       </div>
@@ -72,7 +82,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Public Blockchain
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.blockchainName}}
         </div>
       </div>
@@ -81,7 +91,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Public Key
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.publicKey}}
         </div>
       </div>
@@ -113,16 +123,6 @@
         </div>
       </div>
     </div>
-    <div class="row ml-0 mr-0 pt-3 pb-3 mb-3" style="background-color: #E4F7E7;">
-      <div class="col-12 col-sm-12 col-md-1 text-center text-md-right">
-        <i class="fas fa-check-circle status-text-matched pt-1" style="font-size: 20px;"></i>
-      </div>
-      <div class="col-12 col-sm-12 col-md-11 text-center text-md-left">
-        <span style="color: #43BB52;font-weight: 500;font-size: 20px;">It's been verified that this is the first
-          transaction</span>
-      </div>
-    </div>
-
 
     <div class="col-xs-12 col-md-12 center pt-5" style="color: #6C757D;">
       View this Transaction in Stellar<br>
