--- a/src/app/features/transaction-details/transaction-details.component.html
+++ b/src/app/features/transaction-details/transaction-details.component.html
@@ -55,7 +55,7 @@
           <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
             Available Proofs
           </div>
-          <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;">
             <div class="text-md-left text-center pl-md-1 mr-2" style="font-weight: 600;color:#818E94; float: left;"
               *ngFor="let proof of txnItem.availableProofs">
               <a href="#" onclick="return false;"><span (click)="navigateToProof(proof)"
@@ -89,7 +89,7 @@
           <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
             Product ID
           </div>
-          <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;">
             {{txnItem.productId}}
           </div>
         </div>
@@ -143,7 +143,7 @@
           <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
             From
           </div>
-          <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;">
             {{txnItem.sender}}
           </div>
         </div>
@@ -152,7 +152,7 @@
           <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
             To
           </div>
-          <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+          <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;">
             {{txnItem.receiver}}
           </div>
         </div>
