TRAC-3031 UI responsive Issue trasaction details

--- a/src/app/features/proofs/poe/proof-poe.component.css
+++ b/src/app/features/proofs/poe/proof-poe.component.css
@@ -84,3 +84,10 @@
     box-shadow: inset 0px 0px 0px 30px #007bff;
   }
 }
+
+@media screen and (max-width: 600px) {
+.trasactionDataMobileResponsive{
+overflow-y: auto;  
+overflow-wrap: break-word;
+}
+}
