--- a/src/app/features/proofs/pog/proof-pog.component.html
+++ b/src/app/features/proofs/pog/proof-pog.component.html
@@ -43,7 +43,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Product Name
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.productName}}
         </div>
       </div>
@@ -52,7 +52,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Product ID
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.productId}}
         </div>
       </div>
@@ -61,7 +61,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Identifier
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.identifier}}
         </div>
       </div>
@@ -70,7 +70,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Timestamp
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.timestamp | date: 'medium'}}
         </div>
       </div>
@@ -100,7 +100,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Transaction Fee
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.fee}}
         </div>
       </div>
@@ -109,7 +109,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Ledger
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.ledger}}
         </div>
       </div>
@@ -118,7 +118,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Sequence
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.sequence}}
         </div>
       </div>
