--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -65,25 +65,33 @@
       </div>
     </div>
     <div class="mb-3" style="background-color: #fff;">
-      <div class="pt-2 pb-2 pl-3 row no-gutters status-border {{ hashesMatch ? 'matched' : 'not-matched'}}">
+      <div class="d-flex justify-content-between">
+      <div class="pt-2 pb-2 pl-3 row no-gutters status-border {{ hashesMatch ? 'matched' : 'not-matched'}} ">
         <div class="card-topic col-md-12 col-sm-12 col-xs-12 text-left pt-sm-2 pt-2 pb-sm-1 pb-1">
           <h2 style="font-weight: 500;color: #2D2F39;font-size: 24px;">
             {{ hashesMatch ? 'Hashes Matched' : 'Hashes Not Matched'}}
             <i class="fas ml-5 {{ hashesMatch ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched'}} "
               style="font-size: 18px;"></i>
           </h2>
-
         </div>
       </div>
-
+       <!-- get it validated -->
+      <div class="row  mr-2 align-self-center ">
+        <div class="col-12 text-center pb-2 align-self-center" style="text-decoration: underline;font-size: 15px;">
+          <a href="#" class="" data-toggle="modal" data-target="#myModal">
+            Get it validated by yourself
+          </a>
+        </div>
+      </div>
+    </div>  
       <div class="row mb-3 mt-3 ">
-        <div class="col-12 col-md-12">
+        <div class="col-12 col-md-12 ">
           <div class="row pl-3">
-            <div class="col-12 col-md-9 text-left">
+            <div class="col-12 col-md-9 text-left ">
               <div style="font-size: 18px; font-weight:500;">
                 Hash value from Tracified
               </div>
-              <div class="mt-2"
+              <div class="mt-2  mr-2"
                 style="font-weight: 700;  overflow-y: auto;  overflow-wrap: break-word;">
                 {{transactionData.DbHash | lowercase}}
               </div>
@@ -99,7 +107,7 @@
               <div style="font-size: 18px; font-weight:500;">
                 Hash value from Blockchain
               </div>
-              <div class=" mt-2"
+              <div class=" mt-2 mr-2"
                 style="font-weight: 700;  overflow-y: auto;  overflow-wrap: break-word;  ">
                 {{transactionData.BcHash | lowercase}}
               </div>
@@ -109,14 +117,7 @@
         </div>
       </div>
 
-      <!-- get it validated -->
-      <div class="row mt-3 mb-3">
-        <div class="col-12 text-center pb-2" style="text-decoration: underline;font-size: 13px;">
-          <a href="#" class="" data-toggle="modal" data-target="#myModal">
-            Get it validated by yourself.
-          </a>
-        </div>
-      </div>
+ 
     </div>
     <div class="col-xs-12 col-md-12 text-left pt-2 pb-1"
       style="background-color: white; border-bottom: 0.5px solid #dee2e6;">
@@ -137,7 +138,7 @@
 
       <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4"
         *ngFor="let item of tracifiedCoreData.data | keyvalue">
-        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500; "
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0 trasactionDataMobileResponsive" style="font-size: 18px; font-weight:500; "
           *ngIf="item.key != 'photos'">
           {{item.key}}
         </div>
@@ -170,7 +171,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Identifier
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{transactionData.Identifier}}
         </div>
       </div>
@@ -179,7 +180,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Stage ID
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{tracifiedCoreData.header.stageID}}
         </div>
       </div>
@@ -188,7 +189,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Product Name
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{tracifiedCoreData.header.item.itemName}}
         </div>
       </div>
@@ -197,7 +198,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Product ID
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{tracifiedCoreData.header.item.itemID}}
         </div>
       </div>
@@ -206,7 +207,7 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Ledger
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
           {{transactionData.Ledger}}
         </div>
       </div>
