--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -65,8 +65,8 @@
       </div>
     </div>
     <div class="mb-3" style="background-color: #fff;">
-      <div class="d-flex justify-content-between">
-      <div class="pt-2 pb-2 pl-3 row no-gutters status-border {{ hashesMatch ? 'matched' : 'not-matched'}} ">
+      <div class="d-flex justify-content-between m-2">
+      <div class="pt-2 pb-2 pl-3 ml-2 row no-gutters status-border {{ hashesMatch ? 'matched' : 'not-matched'}} ">
         <div class="card-topic col-md-12 col-sm-12 col-xs-12 text-left pt-sm-2 pt-2 pb-sm-1 pb-1">
           <h2 style="font-weight: 500;color: #2D2F39;font-size: 24px;">
             {{ hashesMatch ? 'Hashes Matched' : 'Hashes Not Matched'}}
@@ -234,8 +234,10 @@
 
     <div class="col-xs-12 col-md-12 center pt-5" style="color: #6C757D;">
       View this Transaction in Stellar<br>
-      <a href="{{transactionData.Url}}" target="_blank"><button class="mt-2 btn btn-primary btn-main" type="button"
-          style="width: fit-content;background-color: #3182BD;border:none">View Transaction</button></a>
+      <a href="{{transactionData.LabUrl}}" target="_blank"><button class="mt-2 mb-2 mr-2 ml-2 btn btn-primary btn-main btnFixSize" type="button"
+        style="width: fit-content;background-color: #3182BD;border:none">View on Stellar Lab</button></a>
+        <a href="{{transactionData.Url}}" target="_blank"><button class="mt-2 mb-2 mr-2 ml-2 btn btn-primary btn-main btnFixSize" type="button"
+          style="width: fit-content;background-color: #3182BD;border:none">JSON View</button></a>
     </div>
   </div>
   <div class="container" *ngIf="loadingComplete && errorOccurred">
