--- a/src/app/features/transaction-details/transaction-details.component.html
+++ b/src/app/features/transaction-details/transaction-details.component.html
@@ -26,18 +26,16 @@
         </div>
       </div>
     </div>
-
+    <div class="col-12 col-md-12 pb-3 ml-0 pt-md-4 pl-md-4 pr-md-4" style="background-color: white;">
     <div class="col-xs-12 col-md-12 mt-3 mt-md-4">
       <div class="col-xs-12 col-md-12 text-left pt-2 pb-1"
         style="background-color: white; border-bottom: 0.5px solid #dee2e6;">
         <h2 style="font-weight: 500;color: #2D2F39;font-size: 28px;">Transaction Data</h2>
-      </div>
-      <div class="col-12 col-md-12 pb-3 ml-0 pt-md-4 pl-md-4 pr-md-4" style="background-color: white;">
         <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf="txnItem.txnHash">
           <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
             Transaction Hash
           </div>
-          <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;">
+          <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
             {{txnItem.txnHash}}
           </div>
         </div>
@@ -193,11 +191,14 @@
           </div>
         </div>
       </div>
+      </div>
     </div>
     <div class="col-xs-12 col-md-12 center pt-5" style="color: #6C757D;">
       View this Transaction in Stellar<br>
-      <a href="{{txnItem.txnUrl}}" target="_blank"><button class="mt-2 btn btn-primary btn-main" type="button"
-          style="width: fit-content;background-color: #3182BD;border:none">View Transaction</button></a>
+      <a href="{{txnItem.labTxnUrl}}" target="_blank"><button class="mt-2 mb-2 mr-2 ml-2 btn btn-primary btn-main btnFixSize" type="button"
+        style="width: fit-content;background-color: #3182BD;border:none">View on Stellar Lab</button></a>
+        <a href="{{txnItem.txnUrl}}" target="_blank"><button class="mt-2 mb-2 mr-2 ml-2 btn btn-primary btn-main btnFixSize" type="button"
+          style="width: fit-content;background-color: #3182BD;border:none">JSON View</button></a>
     </div>
 
   </div>
