TRAC-3363 POC UI with Node verification

--- a/src/styles.css
+++ b/src/styles.css
@@ -298,3 +298,8 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.edgePath {
+  cursor: pointer;
+  width: 100px;
+}
