TRAC-3235 Add Pagination to the search results in tillit

--- a/src/app/features/search-page/search-page.component.html
+++ b/src/app/features/search-page/search-page.component.html
@@ -11,13 +11,16 @@
                                 <div class="container mt-3">
                                         <div class="row mb-3">
                                                 <div class="col-12">
-                                                        <p class="lead search-text overflow-ellipsis">{{results.length}}
-                                                                result{{results.length == 1 ? '' : 's'}} for
+                                                        <p class="lead search-text overflow-ellipsis">{{NoItems}}
+                                                                result{{NoItems == 1 ? '' : 's'}} for
                                                                 {{searchId}}</p>
                                                 </div>
                                         </div>
                                 </div>
-                                <app-card *ngFor="let item of results" [transactionData]="item"></app-card>
+                                <div>
+                                <app-card *ngFor="let item of results | paginate: {itemsPerPage:perPage, currentPage:page, totalItems:NoItems }" [transactionData]="item"></app-card>
+                                <pagination-controls class="text-center" (pageChange) = "onChangePage($event)" (pageBoundsCorrection) = "onChangePage($event)" autoHide = "true" responsive = "true" ></pagination-controls>
+                                </div>
                         </div>
                         <div class="row content-area" *ngIf="loadingComplete && errorOccurred">
                                 <app-error-id [errorType]="error.errorType" [errorTitle]="error.errorTitle"
