--- a/src/app/features/search-page/card/card.component.html
+++ b/src/app/features/search-page/card/card.component.html
@@ -1,12 +1,12 @@
 <!-- This is the item card component. -->
 <!-- Enable only when testing -->
 <!-- <app-loader *ngIf ="showLoaderNew"></app-loader> -->
-<div class="col-xs-12 col-md-12 mt-3 mt-md-4">
-  <div class="card mb-3 cardshadow">
+<div class="container-fluid justify-content-center">
+  <div class="card  cardshadow">
  
-    <div class="row no-gutters">
+    <div class="row m-3 no-gutters">
       <!-- Item image -->
-      <div class="col-md-3 align-self-center imageCardCenter">
+      <!-- <div class="col-md-3 align-self-center imageCardCenter">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators" *ngIf="transactionData.images && transactionData.images.length > 1">
             <li *ngFor="let item of transactionData.images; let i = index" data-target="#carouselExampleIndicators"
@@ -34,17 +34,17 @@
             <span class="sr-only">Next</span>
           </a>
         </div>
-      </div>
+      </div> -->
 
       <!-- Item content -->
-      <div class="col-md-6 pl-3 contentPadding" style="width:100%;">
-        <div class="card-body">
+      <div class="col-xs-12 col-sm-7 col-md-7 col-lg-8 col-xl-9">
+    
           <div class="row">
-            <div class="col-auto">
-              <h5 class="card-title" *ngIf="transactionData.productName">{{transactionData.productName}}</h5>
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3">
+              <h5 class="card-title font-weight-bold" *ngIf="transactionData.productName">{{transactionData.productName}}</h5>
               <h5 class="card-title" *ngIf="transactionData.assetCode">{{transactionData.assetCode}}</h5>
             </div>
-            <div class="col-auto text-md-left text-center pl-md-1" style="font-weight: 600;color:#818E94;"  *ngFor="let proof of transactionData.availableProofs">           
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9" style="font-weight: 600;color:#818E94;"  *ngFor="let proof of transactionData.availableProofs">           
                 <span class="pl-3 pr-3 pt-2 pb-2 badge badge-pill badge-primary"
                   style="font-size: 14px;background-color: #F3F1FF;color:#818E94;font-weight: 700;">{{proof | uppercase}}</span>           
             </div>
@@ -58,51 +58,51 @@
             </div>
           </div> -->
           <div class="row contentMargin" *ngIf="transactionData.identifier">
-            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4 col-xl-3">
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3">
               <span style="font-weight: 600">Identifier : </span>
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8 col-xl-9">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9">
               <span class="cardcontent">{{transactionData.identifier}}</span>
             </div>
           </div>
           <div class="row contentMargin" >
-            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4 col-xl-3" *ngIf="transactionData.sender">
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3" *ngIf="transactionData.sender">
               <span style="font-weight: 600">Sender : </span>
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8 col-xl-9">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9">
               <span class="cardcontent">{{transactionData.sender}}</span>
             </div>
           </div>
           <div class="row contentMargin" *ngIf="transactionData.receiver">
-            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4 col-xl-3">
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3">
               <span style="font-weight: 600">Receiver : </span>
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8 col-xl-9">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9">
               <span class="cardcontent">{{transactionData.receiver}}</span>
             </div>
           </div>
           <div class="row contentMargin"  *ngIf="transactionData.timestamp">
-            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4 col-xl-3" >
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3" >
               <span style="font-weight: 600">Timestamp : </span>
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8 col-xl-9">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9">
               <span class="cardcontent">{{transactionData.timestamp | date: 'medium'}}</span>
             </div>
           </div>
           <div class="row contentMargin" *ngIf="transactionData.transferType">
-            <div class="col-xs-12 col-sm-4 col-md-5 col-lg-4 col-xl-3">
+            <div class="col-xs-12 col-sm-5 col-md-5 col-lg-3 col-xl-3">
               <span style="font-weight: 600">Type : </span>
             </div>
-            <div class="col-xs-12 col-sm-8 col-md-7 col-lg-8 col-xl-9">
+            <div class="col-xs-12 col-sm-7 col-md-7 col-lg-9 col-xl-9">
               <span class="cardcontent">{{transactionData.transferType | titlecase}}</span>
             </div>
           </div>
-      </div>
+
 </div>
       <!-- Item button Need to fix -->
-      <div class="col-md-3 align-self-center buttonPadding" style="text-align: center;">
+      <div class="col-xs-12 col-sm-5 col-md-5 col-lg-4 col-xl-3 align-self-center" style="text-align: center;">
         <a [routerLink]="['/txn', transactionData.txnHash]"
-          class="btn btn-main btn-view btn-outline-primary mb-4 mb-sm-4 mb-md-0 ">View Item</a>
+          class="btn btn-main btn-view btn-outline-primary btnFixSize">View Item</a>
       </div>
     </div>
 
