--- a/src/app/features/proofs/pococ/proof-pococ.component.html
+++ b/src/app/features/proofs/pococ/proof-pococ.component.html
@@ -7,11 +7,15 @@
   <div class="container mt-5" *ngIf="loadingComplete && !errorOccurred">
     <div class="row mb-3">
       <div class="col-12">
+        <div class="row">
+          <div class="mr-2 ml-3 "><span  (click)="goBack()">   <i class="fas fa-angle-left clickableAwesomeFont" style="font-size: 30px;"></i></span></div>
+          <div >
         <h4>PROOF OF CHANGE OF CUSTODY (POCOC)</h4>
         <p>Proof of mutual consent between two accounts for change of custody of an item</p>
       </div>
     </div>
-
+  </div>
+</div>
     <div class="col-xs-12 col-md-12 text-left pt-2 pb-1"
       style="background-color: white; border-bottom: 0.5px solid #dee2e6;">
       <h2 style="font-weight: 500;color: #2D2F39;font-size: 28px;">Transaction Data</h2>
