--- a/src/app/features/proofs/poe/proof-poe.component.css
+++ b/src/app/features/proofs/poe/proof-poe.component.css
@@ -95,3 +95,13 @@ overflow-wrap: break-word;
 .btnFixSize{
   width: 180px !important;
 }
+
+.clickableAwesomeFont{
+  cursor: pointer;
+  width: 30px;
+  height: 40px;
+}
+
+.clickableAwesomeFont:hover{
+    color:blue !important;
+}
