--- a/src/app/features/proofs/pog/proof-pog.component.css
+++ b/src/app/features/proofs/pog/proof-pog.component.css
@@ -45,3 +45,13 @@
 .btnFixSize{
     width: 180px !important;
   }
+
+.clickableAwesomeFont{
+    cursor: pointer;
+    width: 30px;
+    height: 40px;
+}
+  
+.clickableAwesomeFont:hover{
+    color:blue !important;
+}
