--- a/src/app/features/proofs/pog/proof-pog.component.html
+++ b/src/app/features/proofs/pog/proof-pog.component.html
@@ -6,20 +6,23 @@
   </div>
 
   <div class="container mt-5" *ngIf="loadingComplete && !errorOccurred">
-    <div class="row mb-3">
+    <div class="row mb-3">  
       <div class="col-12">
-        <h4>PROOF OF GENESIS (POG)</h4>
+        <div class="row">
+          <div class="mr-2 ml-3 "><span  (click)="goBack()">   <i class="fas fa-angle-left clickableAwesomeFont" style="font-size: 30px;"></i></span></div>
+          <div >
+            <h4>PROOF OF GENESIS (POG)</h4>
         <p>Proof of initialization of a traceability item</p>
       </div>
     </div>
-
+  </div>
+</div>
     <div class="row ml-0 mr-0 pt-3 pb-3 mb-3" style="background-color: #E4F7E7;">
-      <div class="col-12 col-sm-12 col-md-1 text-center text-md-right">
-        <i class="fas fa-check-circle status-text-matched pt-1" style="font-size: 20px;"></i>
+      <div class="ml-3 align-self-center">
+        <i class="fas fa-check-circle status-text-matched pt-1 " style="font-size: 20px;"></i>
       </div>
-      <div class="col-12 col-sm-12 col-md-11 text-center text-md-left">
-        <span style="color: #43BB52;font-weight: 500;font-size: 20px;">It's been verified that this is the first
-          transaction</span>
+      <div class="col-11 col-sm-11 col-md-11 text-md-left align-self-center">
+        <span style="color: #43BB52;font-weight: 500;font-size: 20px;">It's been verified that this is the first transaction</span>
       </div>
     </div>
 
@@ -66,6 +69,18 @@
         </div>
       </div>
 
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.status'>
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Status
+        </div>
+        <div class="col-12 col-md-9" style="overflow-y: auto;  overflow-wrap: break-word;">
+          <span class="pl-3 pr-3 pt-2 pb-2 badge badge-pill badge-primary"
+            style="font-size: 14px;background-color: #F3F1FF;color:#818E94;font-weight: 700;"><i
+              class="far {{ txnItem.status == 'Success' ? 'fa-check-circle status-text-matched' : 'fa-times-circle status-text-not-matched' }} mr-1"
+              style="font-size: 18px;"></i>{{txnItem.status}}</span>
+        </div>
+      </div>
+
       <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.timestamp'>
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Timestamp
@@ -74,9 +89,6 @@
           {{txnItem.timestamp | date: 'medium'}}
         </div>
       </div>
-    </div>
-
-    <div class="col-xs-12 col-md-12 pb-4 mt-2 mb-3" style="background-color: white;">
 
       <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.blockchainName'>
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
