--- a/src/app/features/transaction-details/transaction-details.component.css
+++ b/src/app/features/transaction-details/transaction-details.component.css
@@ -68,3 +68,13 @@
 .btnFixSize{
     width: 180px !important;
 }
+
+.clickableAwesomeFont{
+    cursor: pointer;
+    width: 30px;
+    height: 40px;
+  }
+  
+  .clickableAwesomeFont:hover{
+      color:blue !important;
+  }
