--- a/src/app/features/transaction-details/transaction-details.component.html
+++ b/src/app/features/transaction-details/transaction-details.component.html
@@ -7,7 +7,10 @@
   <div class="container mt-5" *ngIf="loadingComplete && !errorOccurred">
     <div class="row mb-3">
       <div class="col-12">
+        <div class="row">
+        <div class="mr-3 ml-3 "><span  (click)="goBack()">   <i class="fas fa-angle-left clickableAwesomeFont" style="font-size: 30px;"></i></span></div>
         <h4>Transaction Details</h4>
+      </div>
       </div>
     </div>
 
