--- a/src/app/features/proofs/poe/proof-poe.component.html
+++ b/src/app/features/proofs/poe/proof-poe.component.html
@@ -143,12 +143,27 @@
 
       <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4"
         *ngFor="let item of tracifiedCoreData.data | keyvalue">
-        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0 trasactionDataMobileResponsive" style="font-size: 18px; font-weight:500; "
+        <div class="col-sm-12 col-md-4  col-lg-3 pt-md-0 trasactionDataMobileResponsive" style="font-size: 18px; font-weight:500;"
           *ngIf="item.key != 'photos'">
           {{item.key}}
         </div>
-        <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;" *ngIf="item.key != 'photos'">
-          {{item.value | json}}
+        <div class="col-sm-12 col-md-8 col-lg-9 align-item-center" style=" overflow-y: auto; max-height:150px;" >
+          <div class="row align-self-center " *ngIf="!isObject(item.value)">
+            <div class="col-sm-12 col-md-8 col-lg-9 align-self-center" style=" font-size: 14px; overflow-y: auto;  overflow-wrap:normal;"  >
+              <p>  {{item.value }}</p>
+            </div>
+          </div>
+          <div *ngIf="isObject(item.value)">
+          <div class="row align-self-center"  *ngFor="let subItem of item.value  | keyvalue" style="overflow-y: auto; "> 
+            <div class="col-sm-12 col-md-4 col-lg-3 align-item-center" style=" font-size: 14px; font-weight:420; overflow-wrap:normal;"
+             *ngIf="item.key != 'photos'">
+              <p>{{subItem.key}} :</p> 
+            </div>
+            <div class="col-sm-12 col-md-8 col-lg-9 align-item-center" style=" font-size: 14px; overflow-y: auto;  overflow-wrap:normal;"  >
+              <p>  {{subItem.value }}</p>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
       <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='transactionData.Txnhash'>
@@ -157,6 +172,15 @@
         </div>
         <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;">
           {{transactionData.Txnhash}}
+        </div>
+      </div>
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf="transactionData.SequenceNo">
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Sequence
+        </div>
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
+          {{transactionData.SequenceNo}}
         </div>
       </div>
 
@@ -230,8 +254,18 @@
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Fee
         </div>
-        <div class="col-12 col-md-9 " style="overflow: hidden; text-overflow: ellipsis;">
+        <div class="col-12 col-md-9 " style="overflow-y: auto; text-overflow: ellipsis;">
           {{transactionData.FeePaid}}
+        </div>
+      </div>
+
+
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf="transactionData.Timestamp">
+        <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
+          Timestamp
+        </div>
+        <div class="col-12 col-md-9 " style="overflow-y: auto;  overflow-wrap: break-word;">
+          {{transactionData.Timestamp | date: 'medium'}}
         </div>
       </div>
 
