--- a/src/app/features/proofs/pococ/proof-pococ.component.html
+++ b/src/app/features/proofs/pococ/proof-pococ.component.html
@@ -124,7 +124,7 @@
         </div>
       </div>
 
-      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.fee'>
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.fee.toString'>
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Transaction Fee
         </div>
@@ -133,7 +133,7 @@
         </div>
       </div>
 
-      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.ledger'>
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.ledger.toString'>
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Ledger
         </div>
@@ -142,7 +142,7 @@
         </div>
       </div>
 
-      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.sequence'>
+      <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.sequence.toString'>
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
           Sequence
         </div>
