--- a/src/app/features/proofs/pog/proof-pog.component.html
+++ b/src/app/features/proofs/pog/proof-pog.component.html
@@ -92,7 +92,7 @@
 
       <div class="row show-bottom-border mr-0 ml-0 pb-md-4 pt-md-4" *ngIf='txnItem.blockchainName'>
         <div class="col-12 col-md-3 pl-md-4  pt-3 pt-md-0" style="font-size: 18px; font-weight:500;">
-          Public Blockchain
+          Blockchain
         </div>
         <div class="col-12 col-md-9 " style=" overflow-y: auto;  overflow-wrap: break-word;">
           {{txnItem.blockchainName}}
